# MANTIS

./: .gitattributes  LICENSE  README.md  SA-sampler-es.py  compute_celltype_metabolite.ipynb  compute_regional_metabolite function.ipynb  metabolite_null.ipynb  pyproject.toml  test_package.ipynb
.github/workflows/: workflow.yml
files/: example.h5mu
mantis/: __init__.py
mantis/io/: __init__.py  _io.py
mantis/tools/: __init__.py  _celltype.py  _genemet.py  _region.py  _sampler.py  _space.py  _spc.py
